<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.viewListing.ViewListingFragment"
    android:id="@+id/item_with_map">

    <TextView
        android:id="@+id/viewed_item_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/viewed_item_image"
        android:layout_width="235dp"
        android:layout_height="207dp"
        android:adjustViewBounds="true"
        android:contentDescription="Listing image"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        android:src="@android:drawable/alert_dark_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewed_item_name" />

    <TextView
        android:id="@+id/viewed_item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewed_item_image" />

    <TextView
        android:id="@+id/viewed_item_listingUser"
        android:layout_width="220dp"
        android:layout_height="44dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewed_item_image" />

    <TextView
        android:id="@+id/viewed_item_price"
        android:layout_width="165dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewed_item_image" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view_listing"
        android:layout_width="match_parent"
        android:layout_height="238dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewed_item_description" />

</androidx.constraintlayout.widget.ConstraintLayout>